feature: update records

--- a/PhongKham/PhongKham.csproj
+++ b/PhongKham/PhongKham.csproj
@@ -97,7 +97,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
-    <Compile Include="Modules\FormModule.cs" />
+    <Compile Include="Modules\Utilities.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="tBenhNhan.cs">
