--- a/PhongKham/PhongKham.csproj
+++ b/PhongKham/PhongKham.csproj
@@ -266,6 +266,7 @@
       <DependentUpon>Model1.edmx</DependentUpon>
       <LastGenOutput>Model1.cs</LastGenOutput>
     </Content>
+    <None Include="Resources\bh.jpg" />
     <None Include="Resources\3358576.png" />
     <None Include="Resources\diskette.png" />
     <None Include="Resources\delete.png" />
