--- a/PhongKham/PhongKham.csproj
+++ b/PhongKham/PhongKham.csproj
@@ -124,11 +124,35 @@
     <Compile Include="Forms_DE\frmMain.Designer.cs">
       <DependentUpon>frmMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms_DE\frmMain2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms_DE\frmMain2.Designer.cs">
+      <DependentUpon>frmMain2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms_DE\frmThuoc.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms_DE\frmThuoc.Designer.cs">
       <DependentUpon>frmThuoc.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms_DE\frmTimBenhNhan.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms_DE\frmTimBenhNhan.Designer.cs">
+      <DependentUpon>frmTimBenhNhan.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms_DE\frmTimThuoc.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms_DE\frmTimThuoc.Designer.cs">
+      <DependentUpon>frmTimThuoc.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms_DE\frmTimToaThuoc.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms_DE\frmTimToaThuoc.Designer.cs">
+      <DependentUpon>frmTimToaThuoc.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms_DE\frmToaThuoc.cs">
       <SubType>Form</SubType>
@@ -202,8 +226,20 @@
     <EmbeddedResource Include="Forms_DE\frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms_DE\frmMain2.resx">
+      <DependentUpon>frmMain2.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms_DE\frmThuoc.resx">
       <DependentUpon>frmThuoc.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms_DE\frmTimBenhNhan.resx">
+      <DependentUpon>frmTimBenhNhan.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms_DE\frmTimThuoc.resx">
+      <DependentUpon>frmTimThuoc.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms_DE\frmTimToaThuoc.resx">
+      <DependentUpon>frmTimToaThuoc.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms_DE\frmToaThuoc.resx">
       <DependentUpon>frmToaThuoc.cs</DependentUpon>
@@ -266,6 +302,17 @@
       <DependentUpon>Model1.edmx</DependentUpon>
       <LastGenOutput>Model1.cs</LastGenOutput>
     </Content>
+    <None Include="Resources\menu.png" />
+    <None Include="Resources\options.png" />
+    <None Include="Resources\presentation.png" />
+    <None Include="Resources\search.png" />
+    <None Include="Resources\clipboard.png" />
+    <None Include="Resources\pill.png" />
+    <None Include="Resources\examination.png" />
+    <None Include="Resources\reload %281%29.png" />
+    <None Include="Resources\reload.png" />
+    <None Include="Resources\refresh %281%29.png" />
+    <None Include="Resources\refresh.png" />
     <None Include="Resources\bh.jpg" />
     <None Include="Resources\3358576.png" />
     <None Include="Resources\diskette.png" />
